--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1082,7 +1082,7 @@ html {
   border-radius: 5px;
   margin-top: 10px;
   outline: none;
-  border: 1px solid #ddd;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 10px;
   width: 100%;
   color: #718096;
@@ -1096,6 +1096,9 @@ html {
 }
 .ncpi .pi-info-table-content .pi-info-table thead tr th:first-child {
   padding: 14px 20px;
+}
+.ncpi .pi-info-table-content .pi-info-table tbody tr {
+  border: none;
 }
 .ncpi .pi-info-table-content .pi-info-table tbody tr td {
   width: 140px;
@@ -1124,7 +1127,7 @@ html {
 .ncpi .pi-info-table-content .pi-info-table td input[type=text] {
   width: 68px;
   padding: 10px 8px;
-  border: 1px solid #cbd5e0;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-radius: 4px;
   background-color: #fff;
   outline: none;
@@ -1137,7 +1140,7 @@ html {
 }
 .ncpi .pi-info-table-content .pi-info-table td select {
   background-color: var(--bg-color-air-white);
-  border: 1px solid #cbd5e0;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   font-size: 10px;
   margin-left: -6px;
   outline: none;
@@ -1176,9 +1179,9 @@ html {
 }
 .ncpi .pi-info-table-content button {
   width: 100%;
-  border-radius: 0 0 15px 15px !important;
-  color: #1a202c !important;
-  border: 1px solid #cbd5e0;
+  color: #2D3748 !important;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
+  font-weight: 500;
 }
 @media screen and (max-width: 550px) {
   .ncpi .pi-info-table-content {
@@ -2291,20 +2294,26 @@ html {
 .ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content {
   display: inline;
 }
-.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content .pi-btn-small {
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content .pi-badge {
   color: #F68A0B;
-  background-color: #FFF5E9;
-  border-radius: 0;
   border: none;
   font-size: 12px;
   padding: 6px 14px !important;
   border-radius: 5px;
   font-weight: 700;
 }
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content .pi-badge svg {
+  margin-left: 10px;
+  margin-right: 0;
+}
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content .pi-badge svg path {
+  fill: #F68A0B;
+}
 .ncpi .pi-modal-sidebar-two .pi-modal-header .pi-btn-medium {
   background: #16B21D;
   border-radius: 5px;
   border: none;
+  margin-top: -8px;
 }
 .ncpi .pi-modal-sidebar-two .pi-checklist-head {
   border-bottom: 1px solid #dddddda8;
