--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -269,6 +269,16 @@ input:checked+.pi-switch-slider:before {
 }
 
 .pi-deal-content {
-    max-width: none !important; 
+    // max-width: none !important; 
+    max-width: none !important; overflow-x: scroll; height: 100vh;
     // overflow-x: scroll;
+}
+
+//TODO: remove it after reza add it to html
+.pi-total-list {
+    select {
+        border: 1px solid #dfdfdf;
+        padding: 0 15px 0 10px;
+        margin: 0 5px;
+    }
 }
