--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -52,22 +52,27 @@
 .ncpi .pi-list-single-button-content {
   float: right;
 }
-.ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke {
-  padding: 8px 15px !important;
-}
 .ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke.pi-invite {
   padding: 10px 15px !important;
-}
-.ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-blue {
-  padding: 11px 15px !important;
 }
 .ncpi .pi-list-single-button-content .pi-select {
   margin-bottom: 30px;
   text-align: right;
 }
 .ncpi .pi-list-single-button-content .pi-select label {
+  font-size: 14px;
+  color: #718096;
+  display: inline;
+}
+.ncpi .pi-list-single-button-content .pi-select .pi-action-content {
+  display: inline;
+}
+.ncpi .pi-list-single-button-content .pi-select .pi-action-content .pi-btn {
   font-size: 12px;
-  color: #425466;
+}
+.ncpi .pi-list-single-button-content .pi-select .pi-action-content .pi-btn svg {
+  margin-right: 0;
+  margin-left: 20px;
 }
 .ncpi .pi-list-single-button-content button {
   background-color: #fff;
@@ -75,11 +80,6 @@
   margin-left: 5px;
   border-radius: 4px;
   line-height: 15px;
-}
-.ncpi .pi-list-single-button-content button img {
-  position: relative;
-  top: 2px;
-  left: -3px;
 }
 .ncpi .pi-list-single-button-content .pi-action-btn {
   top: 6px;
@@ -145,6 +145,8 @@
 }
 .ncpi .pi-tag-content ul li {
   margin-right: 40px;
+  font-size: 12px;
+  color: #718096;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content ul li {
@@ -174,22 +176,10 @@
 .ncpi .pi-tag-content ul .pi-action-content {
   display: inline;
 }
-.ncpi .pi-tag-content ul .pi-action-content .pi-action-btn {
+.ncpi .pi-tag-content ul .pi-action-content .pi-btn {
   border: 1px solid #dddddda8;
-  font-weight: 500;
-  color: #4A5568;
-  font-size: 13px;
-  padding: 3px 10px;
-  border-radius: 6px;
-  width: auto;
-  text-align: left;
-  top: 0;
-  height: auto;
-}
-.ncpi .pi-tag-content ul .pi-action-content .pi-action-btn svg {
-  float: right;
-  margin-top: 5px;
-  margin-left: 15px;
+  padding: 3px 10px !important;
+  color: #718096 !important;
 }
 .ncpi .pi-tag-content ul label {
   font-size: 12px;
@@ -200,7 +190,7 @@
   border: 1px solid #E2E8F0;
   min-width: 150px;
   box-shadow: none;
-  left: 4px;
+  left: -10px;
   top: 25px;
 }
 .ncpi .pi-tag-content ul .pi-dropdown-content button {
@@ -312,10 +302,13 @@
 }
 .ncpi .pi-board {
   display: flex;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 .ncpi .pi-board-column {
   margin-right: 20px;
+  width: 250px;
+  background: linear-gradient(180deg, #F0F4F8 0%, rgba(247, 247, 247, 0) 100%);
+  height: calc(100vh - 235px);
 }
 .ncpi .pi-board-column .pi-btn {
   width: 100%;
@@ -328,7 +321,7 @@
 .ncpi .pi-board-column .pi-board-column-title {
   background: #fff;
   padding: 18px 10px 7px 20px;
-  border-top: 5px solid #4c6fff;
+  border-top: 6px solid #4c6fff;
   display: flex;
   position: relative;
 }
@@ -365,13 +358,6 @@
   border-radius: 8px;
   margin-bottom: 15px;
 }
-.ncpi .pi-board-column .pi-board-column-item .pi-badge {
-  float: right;
-  position: absolute;
-  right: 0;
-  top: 47%;
-  border-radius: 8px 0 0 8px;
-}
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top {
   padding: 15px;
   border-bottom: 1px solid #dddddda8;
@@ -391,9 +377,14 @@
   font-size: 12px;
   color: #718096;
 }
+.ncpi .pi-board-column .pi-bg-white {
+  color: #718096;
+  padding: 22px 20px;
+}
 .ncpi .pi-avatar-content {
   padding: 10px 15px;
   display: flex;
+  position: relative;
 }
 .ncpi .pi-avatar-content img {
   width: 37px;
@@ -413,12 +404,19 @@
 .ncpi .pi-avatar-content .pi-avatar-text p,
 .ncpi .pi-avatar-content .pi-avatar-text h5 {
   margin: 0;
-  font-size: 12px;
+  font-size: 10px;
+}
+.ncpi .pi-avatar-content .pi-badge {
+  right: 15px;
+  top: 50%;
+  position: absolute;
+  transform: translateY(-50%);
+  font-weight: 500;
+  padding: 0px 7px;
+  border-radius: 3px;
 }
 .ncpi .pi-board-content {
-  width: 235px;
-  padding: 15px 10px;
-  width: 235px;
+  margin-top: 10px;
 }
 .ncpi .pi-note {
   display: flex;
