--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -813,7 +813,7 @@ html {
   margin-right: 3px;
 }
 .ncpi .pi-table-action {
-  padding: 20px 15px;
+  padding: 20px 18px;
   background: #FAFAFB;
   border-radius: 8px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.06);
@@ -1629,6 +1629,8 @@ html {
   border: 1px solid #E2E8F0;
   border-radius: 5px;
   margin: 0 5px 0 5px;
+  border: 1px solid #CBD5E0;
+  outline: none;
 }
 .ncpi .pi-search-bar .pi-total-list p span {
   font-weight: 500;
@@ -1852,7 +1854,7 @@ html {
   font-size: 14px;
   background-color: #fff;
 }
-.ncpi .pi-pagination li a.pi-active,
+.ncpi .pi-pagination li li.pi-active a,
 .ncpi .pi-pagination li a:hover {
   color: var(--text-color-blue) !important;
 }
@@ -2719,6 +2721,7 @@ html {
   position: absolute;
   cursor: pointer;
   width: 100%;
+  z-index: 10;
   opacity: 0;
   height: 50px;
 }
@@ -3962,6 +3965,9 @@ select {
 .ncpi .pi-form-style-one input[type=email]:focus,
 .ncpi .pi-form-style-one input[type=text]:focus {
   border: 1px solid #4C6FFF !important;
+}
+.ncpi .pi-form-style-one textarea {
+  border: 1px solid #CBD5E0;
 }
 .ncpi .pi-form-style-two select,
 .ncpi .pi-form-style-two input[type=email],
